--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10
 }
 
 repositories {
@@ -24,8 +25,9 @@ dependencies {
     // This dependency is used by the application.
     implementation libs.guava
 
-
     implementation 'com.yahoofinance-api:YahooFinanceAPI:3.17.0'
+    implementation 'org.openjfx:javafx-controls:17'
+    implementation 'org.openjfx:javafx-fxml:17'
 
 }
 
@@ -34,6 +36,10 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+}
+javafx {
+    version = "17"
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 application {
